--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
                 <input class="btn btn-warning" type="submit" value="Sign Out" />
             </form></li>
 
-            <li><a href="/admin/addSong">Aggiungi una canzone</a></li>
+            <li><a href="/admin/addSong.html">Aggiungi una canzone</a></li>
         </ul>
     </div>
 </header>
