--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -43,7 +43,7 @@
         .microsoft-btn { background: #2F2F2F; }
     </style>
 </head>
-<body>
+<body onload="return checkLoggedUser()">
 <div class="login-container">
     <h2>Accedi</h2>
     <form action="/login" method="POST">
@@ -59,5 +59,17 @@
     <a href="/.auth/login/google" class="google-btn">Accedi con Google</a>
     <a href="/.auth/login/aad" class="microsoft-btn">Accedi con Microsoft</a>
 </div>
+
+<script>
+    function checkLoggedUser() {
+        let baseUrl=window.host
+        fetch (baseUrl+'/.auth/me').then(response=>{
+            if (response.ok)
+                alert(response.body+'')
+            else
+                alert('error')
+        }).catch(()=>alert('exception'))
+    }
+</script>
 </body>
 </html>
