--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,7 +62,8 @@
 
 <script>
     function checkLoggedUser() {
-        let baseUrl=window.host
+        let baseUrl=window.location.hostname
+        alert(baseUrl)
         fetch (baseUrl+'/.auth/me').then(response=>{
             if (response.ok)
                 alert(response.body+'')
