prova check logged user in login.html

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,9 +62,9 @@
 
 <script>
     function checkLoggedUser() {
-        let baseUrl=window.location.hostname
-        alert(baseUrl)
-        fetch (baseUrl+'/.auth/me').then(response=>{
+        // let baseUrl=window.location.hostname
+        // alert(baseUrl)
+        fetch ('/.auth/me').then(response=>{
             if (response.ok)
                 alert(response.body+'')
             else
