--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -62,14 +62,10 @@
 
 <script>
     function checkLoggedUser() {
-        // let baseUrl=window.location.hostname
-        // alert(baseUrl)
         fetch ('/.auth/me').then(response=>{
             if (response.ok)
-                alert(response.body+'')
-            else
-                alert('error')
-        }).catch(()=>alert('exception'))
+                window.location.replace('/index.html')
+        }).catch(error=>throw new Error(error))
     }
 </script>
 </body>
