prova check logged user in login.html

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -65,7 +65,7 @@
         fetch ('/.auth/me').then(response=>{
             if (response.ok)
                 window.location.replace('/index.html')
-        }).catch(error=>throw new Error(error))
+        }).catch(error=>console.error(error))
     }
 </script>
 </body>
