--- a/src/main/resources/static/admin/addSong.html
+++ b/src/main/resources/static/admin/addSong.html
@@ -20,7 +20,7 @@
         <label for="audio-file">Traccia Audio (MP3):</label>
         <input type="file" id="audio-file" name="audio_file" accept="audio/mpeg" required>
 
-        <button type="submit">Carica Canzone</button>
+        <input type="submit" value="Carica Canzone" class="submit">
     </form>
 </div>
 </body>
